--- a/ContentProviderExample/ContentProviderExample/res/values/strings.xml
+++ b/ContentProviderExample/ContentProviderExample/res/values/strings.xml
@@ -1,4 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+ This program is free software. It comes without any warranty, to
+ the extent permitted by applicable law. You can redistribute it
+ and/or modify it under the terms of the Do What The Fuck You Want
+ To Public License, Version 2, as published by Sam Hocevar. See
+ http://sam.zoy.org/wtfpl/COPYING for more details.
+-->
 <resources>
     <string name="app_name">ContentProviderExample</string>
+    
+    <string-array name="words">
+        <item>Lorem</item>
+        <item>ipsum</item>
+        <item>dolor</item>
+        <item>sit</item>
+        <item>amet</item>
+        <item>consectetur</item>
+        <item>adipiscing</item>
+        <item>elit</item>
+        <item>Pellentesque</item>
+        <item>molestie</item>
+    </string-array>
 </resources>
