CheckableListView: Create `AddActivity`

--- a/CheckableListView/app/src/main/res/values/strings.xml
+++ b/CheckableListView/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="app_name">CheckableListView</string>
     <string name="add">Add</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
