TestNextKey: Layout with two `TextView`s

--- a/TestNextButton/app/src/main/res/values/strings.xml
+++ b/TestNextButton/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TestNextButton</string>
+    <string name="action_settings">Settings</string>
+    <string name="second">Second:</string>
+    <string name="first">First:</string>
 </resources>
