--- a/SelectAllExample/app/src/main/res/values/strings.xml
+++ b/SelectAllExample/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SelectAllExample</string>
+    <string name="ok">OK</string>
 
     <string-array name="data">
         <item>Eddard</item>
