Use XML instead of Jetpack Compose

--- a/NotificationExample/app/src/main/res/values/strings.xml
+++ b/NotificationExample/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NotificationExample</string>
+    <string name="text_label">Hello Android</string>
 </resources>
