--- a/NotificationExample/app/src/main/res/values/strings.xml
+++ b/NotificationExample/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">NotificationExample</string>
     <string name="button_text">Send Notification</string>
+    <string name="channel_name">Notification Example</string>
+    <string name="channel_description">Channel for Notification Example</string>
 </resources>
